# build_safely

./: CHANGELOG.md  Cargo.toml  README.md
crates/build_safely/: Cargo.toml
crates/build_safely/examples/adt_const_params/: Cargo.toml  build.rs
crates/build_safely/examples/adt_const_params/allowed/.cargo/: config.toml
crates/build_safely/examples/adt_const_params/src/: lib.rs
crates/build_safely/examples/assert_matches/: Cargo.toml  build.rs
crates/build_safely/examples/assert_matches/src/: lib.rs
crates/build_safely/examples/beta/bool_to_result/: Cargo.toml  build.rs
crates/build_safely/examples/beta/bool_to_result/src/: lib.rs
crates/build_safely/examples/beta/strip_circumfix/: Cargo.toml  build.rs
crates/build_safely/examples/beta/strip_circumfix/src/: lib.rs
crates/build_safely/examples/bool_to_result/: Cargo.toml  build.rs
crates/build_safely/examples/bool_to_result/src/: lib.rs
crates/build_safely/examples/can_vector/: Cargo.toml  build.rs
crates/build_safely/examples/can_vector/src/: lib.rs
crates/build_safely/examples/doc_notable_trait/: Cargo.toml  build.rs
crates/build_safely/examples/doc_notable_trait/src/: lib.rs
crates/build_safely/examples/iterator_try_collect/: Cargo.toml  build.rs
crates/build_safely/examples/iterator_try_collect/src/: lib.rs
crates/build_safely/examples/never_type_try_v2_residual/: Cargo.toml  build.rs
crates/build_safely/examples/never_type_try_v2_residual/src/: lib.rs
crates/build_safely/examples/proc_macro_diagnostic/: Cargo.toml  build.rs
crates/build_safely/examples/proc_macro_diagnostic/src/: lib.rs
crates/build_safely/examples/stable/assert_matches/: Cargo.toml  build.rs  rust-toolchain.toml
crates/build_safely/examples/stable/assert_matches/src/: lib.rs
crates/build_safely/examples/strip_circumfix/: Cargo.toml  build.rs
crates/build_safely/examples/strip_circumfix/src/: lib.rs
crates/build_safely/examples/unsized_const_params/: Cargo.toml  build.rs
crates/build_safely/examples/unsized_const_params/src/: lib.rs
crates/build_safely/examples/unstable/adt_const_params/: Cargo.toml
crates/build_safely/examples/unstable/adt_const_params/src/: lib.rs
crates/build_safely/examples/unstable/bool_to_result/: Cargo.toml
crates/build_safely/examples/unstable/bool_to_result/src/: lib.rs
crates/build_safely/examples/unstable/can_vector/: Cargo.toml  build.rs
crates/build_safely/examples/unstable/can_vector/src/: lib.rs
crates/build_safely/examples/unstable/doc_notable_trait/: Cargo.toml  build.rs
crates/build_safely/examples/unstable/doc_notable_trait/src/: lib.rs
crates/build_safely/examples/unstable/iterator_try_collect/: Cargo.toml  build.rs
crates/build_safely/examples/unstable/iterator_try_collect/src/: lib.rs
crates/build_safely/examples/unstable/never_type/: Cargo.toml  build.rs
crates/build_safely/examples/unstable/never_type/src/: lib.rs
crates/build_safely/examples/unstable/never_type_try_v2_residual/: Cargo.toml  build.rs
crates/build_safely/examples/unstable/proc_macro_diagnostic/: Cargo.toml  build.rs
crates/build_safely/examples/unstable/try_v2/: Cargo.toml  build.rs
crates/build_safely/examples/unstable/unsized_const_params/: Cargo.toml  build.rs
crates/build_safely/examples/unstable/write_all_vectored/: Cargo.toml  build.rs
crates/build_safely/examples/write_all_vectored/: Cargo.toml  build.rs
crates/build_safely/examples/write_all_vectored/src/: lib.rs
crates/build_safely/src/: lib.rs  nightly.rs
crates/build_safely/tests/: nightly_features.rs  probes.rs
crates/ninja-build_rs/: Cargo.toml
crates/ninja-build_rs/src/: lib.rs
(+22 files in other folders)
