[workspace]
members = ["crates/*", "crates/build_safely/examples/*"]
resolver = "3"

[workspace.package]
version = "0.4.1"
edition = "2024"
readme = "README.md"
description = "build script helpers for working with nightly"
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
keywords = ["build", "autocfg", "nightly"]
homepage = "https://github.com/MusicalNinjaDad/build_safely"
repository = "https://github.com/MusicalNinjaDad/build_safely"
categories = ["development-tools::build-utils"]
license = "MIT"
rust-version = "1.85.1"
