[workspace]
members = [
    "crates/*",
    "crates/build_safely/examples/unstable/*",
    "crates/build_safely/examples/beta/*",
    "crates/build_safely/examples/stable/*",
]
resolver = "3"

[workspace.package]
version = "0.5.2"
edition = "2024"
readme = "README.md"
description = "build script helpers for working with nightly"
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
keywords = ["build", "autocfg", "nightly"]
homepage = "https://github.com/MusicalNinjaDad/build_safely"
repository = "https://github.com/MusicalNinjaDad/build_safely"
categories = ["development-tools::build-utils"]
license = "MIT"
rust-version = "1.85.1"

[workspace.dependencies]
build_safely = { version = "0.5.1", path = "crates/build_safely" }

autocfg = "1.5.1"
derive_more = { version = "2.1.1", features = ["display"] }
indexmap = "2.14.0"
rstest = "0.26.1"
tempfile = "3.27.0"
toml = "1.1.2+spec-1.1.0"
