[package]
name = "build_safely"
version.workspace = true
edition.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
autocfg.workspace = true
derive_more.workspace = true
indexmap.workspace = true

[dev-dependencies]
escargot.workspace = true
rstest.workspace = true
tempfile.workspace = true
